# aicvbr

./: .gitignore  profile.md  pyproject.toml  test.py
src/: __init__.py  const.py  logger.py  main.py  schema.py
src/ai/: chat.py  embedding.py  lamma3.py
src/ai/tmp/: job.md  profile.md
src/api/: job.py  linkedin.py
src/api/service/: job.py  linkedin.py
src/crawler/: linkedin.py  sites.py
