[project]
name = "aicvbr"
version = "0.1.0"
description = "Generate CV from linkedin profile and job description using AI"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "bs4>=0.0.2",
    "fastapi[standard]>=0.115.5",
    "httpx>=0.27.2",
    "langchain>=0.3.7",
    "linkedin-api>=2.3.1",
    "pydantic>=2.10.1",
    "pyhumps>=3.8.0",
    "pysqlx-engine>=0.3.2",
    "uvicorn>=0.32.1",
    "langchain-openai>=0.2.9",
    "unstructured[md]>=0.16.6",
    "langchain-community>=0.3.7",
    "faiss-cpu>=1.9.0.post1",
]

[dependency-groups]
dev = [
    "html2text>=2024.2.26",
    "isort>=5.13.2",
    "langdetect>=1.0.9",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.8.0",
    "taskipy>=1.14.0",
]

[tool.ruff]
line-length = 120
exclude = [".venv"]
target-version = "py313"


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
#ignore = ["E402", "F403", "F405"]
fixable = ["ALL"]

# [tool.ruff.lint.isort]
# case-sensitive = true
# combine-as-imports = true

[tool.pytest.ini_options]
pythonpaths = "."
addopts = "-p no:warnings"
asyncio_default_fixture_loop_scope = "session"

[tool.taskipy.tasks]
lint = "ruff check . && ruff check . --diff"
format = "ruff check . --fix --select I && ruff format ."
pre_test = 'task lint'
test = "pytest tests -vv -x -s --cov=."
post_test = "coverage html"
